--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
 }
+a:hover {
+  color: rgba(0,0,12,1);
+}
 
 .App-logo {
   height: 40vmin;
@@ -12,6 +15,7 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
 
 .App-header {
   background-color: #282c34;
